--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,8 @@
 Django==3.2.7
 django-environ==0.7.0
+django-filter==21.1
+django-sass==1.1.0
+django-versatileimagefield==2.2
+fontawesome-free==5.15.4
+Pillow==8.3.2
+whitenoise==5.3.0
