--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,8 @@ django-environ==0.7.0
 django-filter==21.1
 django-sass==1.1.0
 django-versatileimagefield==2.2
-fontawesome-free==5.15.4
 Pillow==8.3.2
 whitenoise==5.3.0
+psycopg2-binary==2.9.1
+django-heroku
+gunicorn==20.1.0
